fixed gap

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ li {
 	height: 100%;
 	right: 0px;
 	/*away from top by size of text + 2*shadow size + 2*padding*/
-	margin: 65px 0; 
+	margin: 60px 0; 
 	padding: 5px 15px 5px 5px;
 	font-size: 16px;
 	text-shadow: 0 0 1px #FFFFFF;
